Fix: MuiCustomMenu add z-index style

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -42,6 +42,10 @@ $box-shadow-sm: 0 0.2rem 0.1rem -0.1rem rgba($black, 0.12), 0 0.1rem 0.1rem 0 rg
 $box-shadow-md: 0 0.1rem 0.1rem 0 rgba($black, 0.1), 0 0.2rem 0.4rem 0 rgba($black, 0.16);
 $box-shadow-lg: 0 0.4rem 1.6rem -0.1rem rgba(0, 0, 0, 0.25);
 
+// Z-index
+$modal-z-index: 1300;
+$tooltip-z-index: 1500;
+
 // Grid & spacing
 
 $spacer: 0.8rem;
